Điều chỉnh lại cách hoạt động của engine và sửa lại logic sử lý của các detector , bổ sung dung lượng cho phép upload file